# spider-nodejs-web-crawler

./: .dockerignore  .editorconfig  .eslintrc.yml  .gitignore  .nixpacks.toml  .npmignore  .npmrc  .prettierignore  .taplo.toml  .yarnrc.yml  Cargo.toml  Comprehensive-Scraper.postman_collection.json  Dockerfile  LICENSE  README.md  analyze-scraped-data.js  api-response-structure.json  comprehensive-scraper.js  curl-examples.md  curl-examples.sh  index.d.ts  index.js  package-lock.json  package.json  scrape-njdesignpark.js  simple-api-backup.js  simple-api.js  start-server.bat  start-server.sh  start.sh  test-api.js  tsconfig.json  view-page-html.js
.cargo/: config.toml
__test__/: index.spec.ts
bench/: README.md  base.ts  compare.ts  crawlee.ts  oss.ts  package-lock.json  package.json
book/: book.toml
examples/: basic.mjs  cron.mjs  openai.mjs  subscription.mjs
scraped-data/: all-images.txt  all-links.txt  complete-data.json  page-1-https___njdesignpark_com.html  page-10-https___njdesignpark_com_our_services_.html  page-11-https___njdesignpark_com_our_team_.html  page-12-https___njdesignpark_com_careers_.html  page-13-https___njdesignpark_com_about_.html  page-14-https___njdesignpark_com_privacy_policy_.html  page-15-https___njdesignpark_com_graphic_design_.html  page-16-https___njdesignpark_com_ui_ux_.html  page-17-https___njdesignpark_com_digital_marketing_.html  page-2-https___njdesignpark_com_contacts_.html  page-3-https___njdesignpark_com_refund_policy_.html  summary.json  (+6 more)
screenshot_rust/: Cargo.toml
screenshot_rust/src/: main.rs
src/: conversions.rs  (+6 more)
(+46 files in other folders)
